--- a/style-sheet/bilan.css
+++ b/style-sheet/bilan.css
@@ -95,7 +95,7 @@ main .container {
 section {
     margin-bottom: 40px;
     padding: 20px;
-    background: var(--bgColor);
+    background: #e5e7e6;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
