--- a/style-sheet/realisations.css
+++ b/style-sheet/realisations.css
@@ -111,7 +111,7 @@ main {
 
 /* Style des projets */
 .project {
-    background: white;
+    background: #e5e7e6;
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
